[gd_scene load_steps=2 format=3 uid="uid://cxw2a0n1aeany"]

[ext_resource type="Script" uid="uid://4x4e0slwdtgr" path="res://scenes/reward_canvas.gd" id="1_6sbxo"]

[node name="RewardCanvas" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_6sbxo")

[node name="Button" type="Button" parent="."]
offset_left = 200.0
offset_top = 200.0
offset_right = 287.0
offset_bottom = 231.0
text = "BUTTON 1"

[node name="Button2" type="Button" parent="."]
offset_left = 400.0
offset_top = 200.0
offset_right = 487.0
offset_bottom = 231.0
text = "BUTTON 2"

[node name="Button3" type="Button" parent="."]
offset_left = 600.0
offset_top = 200.0
offset_right = 687.0
offset_bottom = 231.0
text = "BUTTON 3"

[connection signal="selection_made" from="." to="." method="_on_selection_made"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
